fix alignment and size

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,14 +28,22 @@ body {
   align-content: center;
   justify-content: center;
 }
+#logo {
+  /*filter: invert(91%) sepia(3%) saturate(1463%) hue-rotate(314deg) brightness(94%) contrast(112%);*/
+  position: absolute;
+  right: 100px;
+  height: 300px;
+  padding-top: 10px;
+}
 
 #title {
+  padding-top: 45px;
+  height: 275px;
   position: absolute;
   left: 100px;
   color: #FDDBDB;
   text-align: left;
   font-weight: 100;
-  margin-top: 100px;
   font-size: 6em;
   width: 400px;
 
@@ -71,13 +79,7 @@ body {
   padding-bottom: 400px;
 }
 
-#logo {
-  /*filter: invert(91%) sepia(3%) saturate(1463%) hue-rotate(314deg) brightness(94%) contrast(112%);*/
-  position: absolute;
-  right: 50px;
-  height: 300px;
-  padding-top: 40px;
-}
+
 
 /* CardEvent */
 .CardContainer {
@@ -148,10 +150,13 @@ body {
   font-size: 1em;
 
 }
+.Middle{
+  font-size: 15px !important;
+}
 
 #etgH {
   color: #FDDBDB;
-  margin-left: 20px;
+  margin-left: 27px;
   margin-bottom: 10px;
   font-size: 2em;
   font-weight: 100;
@@ -164,6 +169,8 @@ body {
 #leftValue2 {
   font-weight: bold;
   color: #FDDBDB;
+  text-align: left;
+  width: 220px !important;
 }
 
 .CardContent .Right {
